# gen-ui-python

./: .gitignore  README.md
backend/: .env.example  Makefile  langgraph.json  pyproject.toml
backend/gen_ui_backend/: chain.py  requirements.txt  server.py
backend/gen_ui_backend/charts/: chain.py  schema.py
backend/gen_ui_backend/tools/: github.py  invoice.py  weather.py
frontend/: README.md  package.json
frontend/ai/: chain.tsx  graph.tsx
frontend/ai/tools/: github_repo.ts  github_repo.tsx  index.ts  invoice.ts  invoice.tsx  weather.ts  weather.tsx
frontend/app/: agent.tsx  layout.tsx  page.tsx
frontend/app/charts/: README.md  agent.tsx  filters.tsx  generate-orders.ts  page.tsx
frontend/components/prebuilt/: auth.tsx  chat.tsx  filter.tsx  github.tsx  invoice.tsx  weather.tsx
frontend/utils/: server.tsx
